project seo work done

--- a/public/index.html
+++ b/public/index.html
@@ -12,21 +12,50 @@
       name="description"
       content="developer portfolio"
     />
-    <meta name="keyword" content="portfolio, javascript, developer, frontend, react, dev, front-end, tech, programmer">
-    <title>Developer Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    
+    <meta name="description" content="Santos Das. Software Engineer. I am a software engineer with expertise in full-stack web development. I have experience in building scalable, secure and reliable web applications using various frameworks and technologies." />
+    <meta name="keywords" content="Santos Das,Santos das,Santosh Das,Santos, das, Das, Santos Das, Santos Das's personal website, Santos Das's website, Santos Das's portfolio, Santos Das's blog, Santos Das's projects, Santos Das's resume, Santos Das's contact, Santos Das's about, Santos Das's home, Santos Das's homepage, Santos Das's personal, Santos Das's personal website, Santos Das's personal site, Santos Das's personal blog, Santos Das's personal projects, Santos Das's personal resume, Santos Das's personal contact, Santos Das's personal about, Santos Das's personal home, Santos Das's personal homepage, Santos Das's personal personal, Santos Das's personal personal website, Santos Das's personal personal site, Santos Das's personal personal blog, Santos Das's personal personal projects, Santos Das's personal personal resume, Santos Das's personal personal contact, Santos Das's personal personal about, Santos Das's personal personal home, Santos Das's personal personal homepage" />
+    <meta name="author" content="Santos Das">
+    <meta name="keywords" content="santos  das, santos das, portfolio, software engineer, full-stack web developer, web developer, web development, software developer, software development, html, css, javascript, typescript, reactjs, expressjs, nodejs, nextjs, mongodb, postgresql, porfolio, personal porfolio, personal website, web developer portfolio, web developer website, web developer porfolio website, web developer personal website, web developer personal porfolio" />
+    
+    <link rel="canonical" href="https://santosdas.me/">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BNTTBGHXSC"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-BNTTBGHXSC');
+    </script>
+     <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Santosh Das",
+        "url": "https://santosdas.me/",
+        "sameAs": [
+          "https://www.linkedin.com/in/santoshdas561/",
+          "https://github.com/Santoshd561",
+          "https://x.com/Santosh07292859"
+          "https://www.facebook.com/santoshdas561/",
+          "https://www.instagram.com/iamsantosdas/",
+          "https://stackoverflow.com/users/11787286/santosh-das",
+          "https://medium.com/@santoshd561"
+        ],
+        "jobTitle": "Team Lead"
+      }
+    </script>
+    <title>Santosh Das - Frontend Team Lead</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
