--- a/public/index.html
+++ b/public/index.html
@@ -34,13 +34,15 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-REHYL8BCTH"></script>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-NB05YB2LS4"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NB05YB2LS4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'G-NB05YB2LS4');
-  </script>
+  gtag('config', 'G-NB05YB2LS4');
+</script>
   <script type="application/ld+json">
       {
         "@context": "https://schema.org",
