--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta name="theme-color" content="#000000" />
 
   <base href="/">
-  <meta name="description" content="developer portfolio" />
+  <meta name="description" content="Santos das Portfolio" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,10 +20,10 @@
   <meta name="description"
     content="Santos Das. Software Engineer. I am a software engineer with expertise in full-stack web development. I have experience in building scalable, secure and reliable web applications using various frameworks and technologies." />
   <meta name="keywords"
-    content="Santos Das,Santos das,Santosh Das,Santos, das, Das, Santos Das, Santos Das's personal website, Santos Das's website, Santos Das's portfolio, Santos Das's blog, Santos Das's projects, Santos Das's resume, Santos Das's contact, Santos Das's about, Santos Das's home, Santos Das's homepage, Santos Das's personal, Santos Das's personal website, Santos Das's personal site, Santos Das's personal blog, Santos Das's personal projects, Santos Das's personal resume, Santos Das's personal contact, Santos Das's personal about, Santos Das's personal home, Santos Das's personal homepage, Santos Das's personal personal, Santos Das's personal personal website, Santos Das's personal personal site, Santos Das's personal personal blog, Santos Das's personal personal projects, Santos Das's personal personal resume, Santos Das's personal personal contact, Santos Das's personal personal about, Santos Das's personal personal home, Santos Das's personal personal homepage" />
+    content="Santos Das,Santos das,Santosh Das,Santos, das, Das, Santos Das, Santos Das's personal website, Santos Das's website, Santos Das's portfolio, Santos Das's blog, Santos Das's projects, Santos Das's resume, Santos Das's contact, Santos Das's about, Santos Das's home, Santos Das's homepage, Santos Das's personal, Santos Das's personal website, Santos Das's personal site, Santos Das's personal blog, Santos Das's personal projects, Santos Das's personal resume, Santos Das's personal contact, Santos Das's personal about, Santos Das's personal home, Santos Das's personal homepage, Santos Das's personal personal, Santos Das's personal personal website, Santos Das's personal personal site, Santos Das's personal personal blog, Santos Das's personal personal projects, Santos Das's personal personal resume, Santos Das's personal personal contact, Santos Das's personal personal about, Santos Das's personal personal home, Santos Das's personal personal homepage, santos das rourkela, Santos Das Rourkela, Santos Das VSSUT santos das vssut,Santos das Bhubaneswar,santos das bhubaneswar, santos das react,Santos Das React,santos das reactjs,santos das ReactJS, santos das React.js,Santos das ReactJs" />
   <meta name="author" content="Santos Das">
   <meta name="keywords"
-    content="santos  das, santos das, portfolio, software engineer, full-stack web developer, web developer, web development, software developer, software development, html, css, javascript, typescript, reactjs, expressjs, nodejs, nextjs, mongodb, postgresql, porfolio, personal porfolio, personal website, web developer portfolio, web developer website, web developer porfolio website, web developer personal website, web developer personal porfolio" />
+    content="santos  das, santos das, portfolio, software engineer, full-stack web developer,Team lead,Team Lead, web developer, web development, software developer, software development, html, css, javascript, typescript, reactjs, expressjs, nodejs, nextjs, mongodb, postgresql, porfolio, personal porfolio, personal website, web developer portfolio, web developer website, web developer porfolio website, web developer personal website, web developer personal porfolio" />
 
   <link rel="canonical" href="https://santosdas.me/">
 
@@ -46,16 +46,16 @@
       {
         "@context": "https://schema.org",
         "@type": "Person",
-        "name": "Santosh Das",
+        "name": "Santos Das",
         "url": "https://santosdas.me/",
         "sameAs": [
-          "https://www.linkedin.com/in/santoshdas561/",
-          "https://github.com/Santoshd561",
-          "https://x.com/Santosh07292859"
-          "https://www.facebook.com/santoshdas561/",
-          "https://www.instagram.com/iamsantosdas/",
-          "https://stackoverflow.com/users/11787286/santosh-das",
-          "https://medium.com/@santoshd561"
+          "https://www.linkedin.com/in/santosdasdev/",
+          "https://github.com/caffeineandc0de",
+          "https://x.com/caffeineandc0de"
+          "https://www.facebook.com/caffeineandc0de/",
+          "https://www.instagram.com/caffeineandc0de/",
+          "https://stackoverflow.com/users/11787286/caffeineandc0de",
+          "https://medium.com/@caffeineandc0de"
         ],
         "jobTitle": "Team Lead"
       }
