--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="s-header__block">
                     <div class="s-header__logo">
                         <a class="logo" href="index.html">
-                            <img src="images/logo.svg" alt="Homepage">
+                            <img src="images/SDback.png" alt="Homepage">
                         </a>
                     </div>
 
@@ -214,7 +214,7 @@
             </ul> <!-- end s-intro__social -->
 
             <div class="s-intro__content-media">
-                <img src="images/intro-bg.jpeg" srcset="images/intro-bg.jpeg 1x, images/intro-bg.jpeg " alt="">
+                <img src="images/Profilepic.jpg" srcset="images/Profilepic.jpg 1x, images/Profilepic.jpg " alt="">
             </div> <!-- s-intro__content-media -->
 
 
