--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
 
                         <div class="s-intro__content-pretitle text-pretitle">Hello</div>
                         <h1 class="s-intro__content-title">
-                            I'm Santos Das <br>
-                            a software engineer <br>
-                            base in India.
+                            I'm Santos Das,<br>
+                            a software engineer<br>
+                            based in India.
                         </h1>
-
+                        
                         <div class="s-intro__content-btns">
                             <a class="smoothscroll btn" href="#about">More About Me</a>
                             <a class="smoothscroll btn btn--stroke" href="#footer">Get In Touch</a>
@@ -804,7 +804,6 @@
                 <div class="column xl-6 lg-12">
                     <p class="ss-copyright">
                         <span>© Copyright Santos 2023</span>
-                        <!-- <span>Design by <a href="https://styleshout.com/">Santos</a> Distribution by <a href="https://themewagon.com">ThemeWagon</a></span> -->
                     </p>
                 </div>
 
