--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     </div> <!-- end section-header -->
 
                     <p class="attention-getter">
-                        Hi, I’m a passionate software developer with over 5 years of experience in building innovative,
+                        Hi, I’m a passionate software developer with over 6 years of experience in building innovative,
                         scalable, and user-friendly web applications. I specialize in frontend development using React,
                         JavaScript, and Next.js, and have a strong foundation in project management, team leadership,
                         and delivering high-quality software solutions.
@@ -275,6 +275,10 @@
                         <div class="grid-list-items__item s-about__block">
                             <h4 class="s-about__block-title">Experience</h4>
                             <ul class="s-about__list">
+                                <li>
+                                    Publicis Sapient
+                                    <span>Senior Experience Engineer</span>
+                                </li>
                                 <li>
                                     Metafic
                                     <span>Team Lead</span>
@@ -302,6 +306,12 @@
                             <h4 class="s-about__block-title">Tenure</h4>
 
                             <ul class="s-about__list">
+                                <li>
+                                    Bengaluru
+                                    <a href="#0">
+                                        <span>Jan 2025 — Current</span>
+                                    </a>
+                                </li>
                                 <li>
                                     Remote
                                     <a href="#0">
@@ -348,13 +358,19 @@
                                     CSS3
                                 </li>
                                 <li>
-                                    Frontend Development
-                                </li>
-                                <li>
                                     Javascript
                                 </li>
                                 <li>
+                                    Node JS
+                                </li>
+                                <li>
                                     Outsystems
+                                </li>
+                                <li>
+                                    React Native
+                                </li>
+                                <li>
+                                    Typescript
                                 </li>
                             </ul>
                         </div> <!--end s-about__block -->
