--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                             </ul>
                         </div> <!--end s-about__block -->
 
-                        <div class="grid-list-items__item s-about__block">
+                        <!-- <div class="grid-list-items__item s-about__block">
                             <h4 class="s-about__block-title">Tenure</h4>
 
                             <ul class="s-about__list">
@@ -343,7 +343,7 @@
                                     </a>
                                 </li>
                             </ul>
-                        </div>
+                        </div> -->
                         <div class="grid-list-items__item s-about__block">
                             <h4 class="s-about__block-title">Skills</h4>
 
