--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
                 <div class="column xl-6 lg-12">
                     <ul class="s-footer__social social-list">
                         <li>
-                            <a href="https://www.facebook.com/caffeineandc0de/">
+                            <a href="https://www.facebook.com/thefitandnerd/">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
                                     <path
@@ -778,7 +778,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://x.com/caffeineandc0de">
+                            <a href="https://x.com/thefitandnerd">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
                                     <path
@@ -789,7 +789,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/caffeineandc0de/">
+                            <a href="https://www.instagram.com/thefitandnerd/">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
                                     <path
@@ -804,7 +804,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com/in/santosdasdev/">
+                            <a href="https://www.linkedin.com/in/thefitandnerd/">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;">
                                     <path
@@ -849,5 +849,6 @@
     <script src="js/cursor.js"></script>
 
 </body>
+
 
 </html>
